--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,20 +7,22 @@
     android:orientation="vertical"
     android:id="@+id/main"
     android:gravity="center">
-<TextView
-    android:layout_width="wrap_content"
-    android:text="Quote Generator By Anurag"
-    android:textColor="@android:color/white"
-    android:textSize="30sp"
-    android:textStyle="italic"
-    android:layout_height="wrap_content"/>
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:text="Quote Generator By Anurag"
+        android:textColor="@android:color/white"
+        android:textSize="30sp"
+        android:textStyle="italic"
+        android:layout_height="wrap_content"/>
+
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="16dp"
         app:cardBackgroundColor="#80000000"
-    app:cardElevation="4dp"
-    app:cardCornerRadius="16dp"/>
+        app:cardElevation="4dp"
+        app:cardCornerRadius="16dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -31,13 +33,19 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Click button below and see the Magic...
-"
+            android:text="Click button below and see the Magic..."
             android:textColor="@android:color/white"
             android:textStyle="bold"
             android:layout_marginBottom="20dp"
             android:id="@+id/textView"
             android:textSize="30sp"/>
+
+        <ProgressBar
+            android:id="@+id/progressBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:visibility="gone"
+        android:layout_gravity="center" />  
 
         <Button
             android:layout_width="wrap_content"
@@ -46,14 +54,12 @@
             android:backgroundTint="@android:color/holo_blue_light"
             android:id="@+id/button"
             android:textColor="@android:color/white" />
+
         <Button
             android:layout_width="wrap_content"
             android:id="@+id/Share"
             android:layout_height="wrap_content"
             android:text="Share Quote"
             android:backgroundTint="@android:color/holo_blue_light"/>
-
-
     </LinearLayout>
 </LinearLayout>
-
